feat(treesitter): add `@injection.filename`
Problem: Injecting languages for file redirects (e.g., in bash) is not
possible.

Solution: Add `@injection.filename` capture that is piped through
`vim.filetype.match({ filename = node_text })`; the resulting filetype
(if not `nil`) is then resolved as a language (either directly or
through the list maintained via `vim.treesitter.language.register()`).

Note: `@injection.filename` is a non-standard capture introduced by
Helix; having two editors implement it makes it likely to be upstreamed.

--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -240,6 +240,9 @@ The following new APIs and features were added.
     language aliases (e.g., filetype or custom shorthands) registered via
     |vim.treesitter.language.register()| and/or attempt lower case variants of
     the text.
+  • `@injection.filename` will try to match the node text via
+    |vim.filetype.match()| and treat the result as a language name in the same
+    way as `@injection.language`.
   • The `#set!` directive now supports `injection.self` and `injection.parent`
     for injecting either the current node's language or the parent
     |LanguageTree|'s language, respectively.
