--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -137,6 +137,9 @@ The following changes may require adaptations in user config or plugins.
 • |:TOhtml| has been rewritten in Lua to support Neovim-specific decorations,
   and many options have been removed.
 
+• |nvim_open_win()| now blocks all autocommands when `noautocmd` is set,
+  rather than just those from setting the `buffer` to display in the window.
+
 ==============================================================================
 BREAKING CHANGES IN HEAD                                    *news-breaking-dev*
 
