--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -421,7 +421,8 @@ The following changes to existing APIs or features add new behavior.
 • |vim.diagnostic.get()| and |vim.diagnostic.count()| accept multiple
   namespaces rather than just a single namespace.
 
-• |vim.diagnostic.enable()| accepts an `enabled` boolean parameter.
+• |vim.diagnostic.enable()| gained new parameters, and the old signature is
+  deprecated.
 
 • Extmarks now fully support multi-line ranges, and a single extmark can be
   used to highlight a range of arbitrary length. The |nvim_buf_set_extmark()|
