--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -22,7 +22,7 @@ The following changes may require adaptations in user config or plugins.
 
     set guicursor+=n-v-c:blinkon500-blinkoff500
 <
-• |vim.tbl_islist()| now checks whether a table is actually list-like (i.e.,
+• |vim.islist()| now checks whether a table is actually list-like (i.e.,
   has integer keys without gaps and starting from 1). For the previous
   behavior (only check for integer keys, allow gaps or not starting with 1),
   use |vim.tbl_isarray()|.
@@ -154,6 +154,8 @@ unreleased features on Nvim HEAD.
 • Changed the signature of `vim.diagnostic.enable()`.
 
 • Removed vim.iter.map(), vim.iter.filter(), vim.iter.totable().
+
+• Renamed vim.tbl_islist() to vim.islist().
 
 ==============================================================================
 NEW FEATURES                                                    *news-features*
@@ -563,5 +565,6 @@ release.
 
 • vim.shared functions:
   - |vim.tbl_add_reverse_lookup()|
+  - |vim.tbl_islist()|
 
  vim:tw=78:ts=8:sw=2:et:ft=help:norl:
