--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -25,7 +25,7 @@ The following changes may require adaptations in user config or plugins.
 • |vim.islist()| now checks whether a table is actually list-like (i.e.,
   has integer keys without gaps and starting from 1). For the previous
   behavior (only check for integer keys, allow gaps or not starting with 1),
-  use |vim.tbl_isarray()|.
+  use |vim.isarray()|.
 
 • "#" followed by a digit no longer stands for a function key at the start of
   the lhs of a mapping.
@@ -155,7 +155,7 @@ unreleased features on Nvim HEAD.
 
 • Removed vim.iter.map(), vim.iter.filter(), vim.iter.totable().
 
-• Renamed vim.tbl_islist() to vim.islist().
+• Renamed vim.tbl_isarray() to vim.isarray().
 
 ==============================================================================
 NEW FEATURES                                                    *news-features*
@@ -563,7 +563,7 @@ release.
   populated. Background color detection is now performed in Lua by the Nvim
   core, not the TUI.
 
-• vim.shared functions:
+• Lua stdlib:
   - |vim.tbl_add_reverse_lookup()|
   - |vim.tbl_islist()|
 
