--- a/runtime/doc/news.txt
+++ b/runtime/doc/news.txt
@@ -140,6 +140,8 @@ The following changes may require adaptations in user config or plugins.
 • |nvim_open_win()| now blocks all autocommands when `noautocmd` is set,
   rather than just those from setting the `buffer` to display in the window.
 
+• Removed the |gs| normal command.
+
 ==============================================================================
 BREAKING CHANGES IN HEAD                                    *news-breaking-dev*
 
